# JapDict

./: .gitattributes  .gitignore  combine.py  dict.py  main.py  neo4jGraph.py  neo4j_setup.txt  pyproject.toml  rules.py  steps.py  val.py  wiki_small.txt
..bfg-report/2025-10-28/07-04-45/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
ja_graph_rag_cache/: dictionary.json  graph_edges.json  graph_nodes.json
ja_graph_rag_cache/vector_db/: passage_embeddings.npz  passage_index.json
ja_graph_rag_cache_2/: dictionary.json  graph_edges.json  graph_nodes.json
ja_graph_rag_cache_2/vector_db/: passage_index.json
ja_graph_rag_cache_juman/vector_db/: passage_embeddings.npz
neo4j_output/: 4f3b7616_pass1_terms.json  neo4j_all_terms.json
neo4j_output/db/neo4j/: neostore  neostore.counts.db  neostore.indexstats.db  neostore.labeltokenstore.db.names  neostore.nodestore.db  neostore.nodestore.db.id  neostore.propertystore.db  neostore.propertystore.db.id  neostore.propertystore.db.index.id  neostore.propertystore.db.index.keys  neostore.propertystore.db.index.keys.id  neostore.propertystore.db.strings.id  neostore.relationshipgroupstore.db  neostore.relationshipgroupstore.db.id  neostore.relationshipgroupstore.degrees.db  neostore.relationshipstore.db  neostore.relationshipstore.db.id  (+3 more)
output/: 01_raw_extraction.json  02_cleaned.json  03_definitions.json  power_system_dictionary.json  power_system_dictionary.json.REMOVED.git-id  power_system_dictionary_high_quality.json  power_system_dictionary_high_quality.json.REMOVED.git-id  quality_issues.json
(+15 files in other folders)
