[project]
name = "japdict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "black>=25.9.0",
    "hf-transfer>=0.1.9",
    "isort>=6.1.0",
    "json-repair>=0.52.0",
    "mecab-python3>=1.0.10",
    "neo4j>=5.28.2",
    "neo4j-graphrag>=1.2.1",
    "openai>=2.3.0",
    "protobuf>=6.32.1",
    "pyknp>=0.6.1",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.1",
    "sentencepiece>=0.2.1",
    "sudachidict-full>=20250825",
    "sudachipy>=0.6.10",
]
